--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   # containerRegistryDockerConnection: 'acr'
   # environment: 'aks.default'
 - name: imageRepository
-  value: 'MyPage'
+  value: 'SmartData'
 - name: dockerfilePath
   value: '**/Dockerfile'
 - name: tag
