--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 
 env:
   variables:
-    _ECR_NAME: "user19-mypage"
-    _PROJECT_NAME: "mypage"
+    _ECR_NAME: "user09-smartdata"
+    _PROJECT_NAME: "smartdata"
     _NAMESPACE: "skcc-ns"
-    _AWS_REGION: "us-east-2"
+    _AWS_REGION: "ap-northeast-2"
 
 phases:
   install:
