--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: MyPage
+  name: SmartData
   labels:
-    app: MyPage
+    app: SmartData
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: MyPage
+      app: SmartData
   template:
     metadata:
       labels:
-        app: MyPage
+        app: SmartData
     spec:
       containers:
-        - name: MyPage
-          image: username/MyPage:latest
+        - name: SmartData
+          image: username/SmartData:latest
           ports:
             - containerPort: 8080
           readinessProbe:
