--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: MyPage
+  name: SmartData
   labels:
-    app: MyPage
+    app: SmartData
 spec:
   ports:
     - port: 8080
       targetPort: 8080
   selector:
-    app: MyPage
+    app: SmartData
