--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,19 @@
 server:
   port: 8080
+
+spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2_db
+
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:file:./h2_db;AUTO_SERVER=TRUE
+    username: admin
+    password: 1234
+
+
 ---
 
 spring:
